# sonicstv

./: .gitignore  pyproject.toml  readme.md
src/sonicstv/: __init__.py
src/sonicstv/music/: __init__.py  note.py  sheet.py
src/sonicstv/pic_manip/: bake.py
src/sonicstv/pic_manip/line_process_algo/: __init__.py  cover_all.py  cover_randomly.py  nudge_all.py  stamp_windowed.py  type.py
src/sonicstv/sstv_spec/: __init__.py  base.py  rgb_series.py
utils/: install_local_editable.py
