[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sonicstv"
version = "0.0.0.0"
description = "A non-ML SSTV-oriented melodic visual watermark tool."
requires-python = ">=3.14"
dependencies = [
    "opencv-python", "numpy", "returns"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.scripts]
sonicstv = "sonicstv.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]